@@ -1,6 +1,7 @@
 Version 1.1.9 (released ??-???-????)
 
   * performance improvement: vcauth universal read access determinations
+  * make revision log "extra pages" count configurable
 
 Version 1.1.8 (released 02-Dec-2010)
 
